se realizan correciones para servicor iis

--- a/angular.json
+++ b/angular.json
@@ -45,6 +45,7 @@
                     },
                     "configurations": {
                         "production": {
+                            "assets": [ "src/web.config" ],
                             "fileReplacements": [
                                 {
                                     "replace": "src/environments/environment.ts",
