--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "build": "ng build --deploy-url /employees-admin-front/ --base-href /employees-admin-front/ --configuration=development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
